# qt-apps-boot2qt-demos

./: .export  .gitattributes  .gitmodules  .lfsconfig  b2qt-demos.pro
basicsuite/: README  basicsuite.pro  demos.xml
basicsuite/About Boot to Qt/: AboutBoot2Qt.qml  Box.qml  ContentText.qml  QtForAndroid.qml  QtFramework.qml  description.txt  main.qml
basicsuite/About Qt on Android/: AboutBoot2Qt.qml  Box.qml  QtForAndroid.qml  QtFramework.qml  Title.qml  main.qml
basicsuite/Basic Qt Quick2 App/: main.qml
basicsuite/Camera/: CaptureControl.qml  CapturePreview.qml  Controls.qml  FocusControl.qml  Picker.qml  RecordingTime.qml  description.txt  exclude.txt  main.qml
basicsuite/Controls Layouts/: description.txt  main.qml
basicsuite/Controls Touch/: main.qml
basicsuite/Graphical Effects/: Checkers.qml  description.txt  effect_BrightnessContrast.qml  effect_Colorize.qml  effect_CustomDissolve.qml  effect_CustomWave.qml  effect_Displacement.qml  effect_DropShadow.qml  effect_GaussianBlur.qml  effect_Glow.qml  effect_HueSaturation.qml  effect_OpacityMask.qml  effect_ThresholdMask.qml  main.qml
basicsuite/Hardware Specs/: main.qml
basicsuite/Launcher Settings/: BrightnessController.qml  NetworkController.qml  PoweroffAction.qml  RebootAction.qml  description.txt  main.qml
basicsuite/Media Player/: ControlBar.qml  FileBrowser.qml  Intro.qml  UrlBar.qml  VolumeControl.qml  description.txt  exclude.txt
basicsuite/Photo Gallery/: description.txt  main.qml
basicsuite/Qt5 Cinematic Demo/: Qt5 Cinematic Demo.qmlproject  description.txt  main.qml
basicsuite/Sensors/: main.qml  (+3 more)
doc/: b2qt-demos.qdoc  b2qt-demos.qdocconf  doc.pro  html-offline.qdocconf
experimental/: experimental.pro
startupscreen/: AnalogClock.qml  CMakeLists.txt  GuideView.qml  MainView.qml  QSR_MainView.qml  RebootDialog.qml  SDcardButton.qml  SplashView.ui.qml  StartupScreen.qml  TextButton.qml  UsbButton.qml  UsbModeDialog.qml  WifiButton.qml  main.cpp  qml.qrc  qtquickcontrols2.conf  settingsmanager.cpp  settingsmanager.h  startupscreen.pro
startupscreen/NetworkSettings/: CustomSwitch.qml  NetworkDelegate.qml  NetworkListView.qml  NetworkSettings.qml  NetworkSettingsPage.qml  PassphraseEnter.qml  QtButton.qml  ViewSettings.qml
startupscreen/assets/: b2qt-tutorial-deploying.html
startupscreen/imports/StartupScreen/: Constants.qml
(+902 files in other folders)
